# event_jackal

./: .gitignore  README.md  Singularityfile.def  actor.py  entrypoint.sh  jackal_internet.md  requirements.txt  slurm_generalization_10.sh  slurm_generalization_100.sh  slurm_generalization_5.sh  slurm_generalization_50.sh  slurm_stat.sh  slurm_static_4.sh  slurm_static_8.sh  start.sh  start_real_world.sh  test_env.py  tester.py  train.py  viz.py
configs/: README.md  e2e_default_DDPG.yaml  e2e_default_SAC.yaml  e2e_default_SAC_DYN.yaml  e2e_default_TD3.yaml
configs/architecture_dynamic/: cnn_history_length_4.yaml  cnn_history_length_8.yaml
configs/architecture_static/: cnn_history_length_1.yaml  cnn_history_length_4.yaml  cnn_history_length_8.yaml  mlp_history_length_1.yaml  mlp_history_length_4.yaml  mlp_history_length_8.yaml  rnn_history_length_1.yaml  rnn_history_length_4.yaml  rnn_history_length_8.yaml  transformer_history_length_1.yaml  transformer_history_length_4.yaml  transformer_history_length_8.yaml
configs/generalization/: num_world_10.yaml  num_world_100.yaml  num_world_250.yaml  num_world_5.yaml  num_world_50.yaml
configs/real_world/: e2e_real_world_SAC.yaml
configs/safe_rl/: lagrangian.yaml  mlp.yaml  mpc.yaml
dv_ros/: CMakeLists.txt  package.xml
dv_ros/launch/: dvs.launch
dv_ros/src/: node.cpp
dv_ros_msgs/: CMakeLists.txt
e2d/: __init__.py  dataloader.py  losses.py  model.py  train.py  tsne.py  umap_vis.py
e2d/config/: config.yaml
envs/: gazebo_simulation.py  gazebo_simulation_backup.py  jackal_gazebo_envs.py  jackal_gazebo_placeholder.py  jackal_motion_control.py  jackal_real.py  jackal_real_envs.py  motion_control_envs.py  move_base.py  parameter_tuning_envs.py  registration.py  wrappers.py
esim/: CMakeLists.txt  package.xml
esim/launch/: event_camera.launch
esim/src/: esim_cuda.cpp  esim_cuda_kernel.cu  node_event.cpp
jackal_helper/: CMakeLists.txt  package.xml
jackal_helper/launch/: gazebo_launch.launch
jackal_helper/plugins/: CMakeLists.txt  L2R_101_17.cc  L2R_102_12.cc  L2R_113_3.cc  L2R_117_1.cc  L2R_121_8.cc  L2R_132_9.cc  L2R_146_16.cc  L2R_20_5.cc  L2R_21_15.cc  L2R_37_10.cc  L2R_40_13.cc  L2R_50_19.cc  L2R_66_0.cc  L2R_68_7.cc  L2R_71_11.cc  L2R_71_14.cc  L2R_73_6.cc  L2R_84_18.cc  L2R_95_4.cc  L2R_99_2.cc  R2L_108_19.cc  R2L_109_8.cc  R2L_110_10.cc  R2L_116_6.cc  R2L_12_18.cc  R2L_136_15.cc  R2L_141_2.cc  R2L_142_11.cc  R2L_19_14.cc  R2L_25_3.cc  R2L_26_5.cc  R2L_33_4.cc  R2L_43_12.cc  R2L_54_7.cc  R2L_61_13.cc  R2L_71_17.cc  R2L_74_0.cc  R2L_77_1.cc  R2L_77_9.cc  (+181 more)
jackal_helper/scripts/: change_shadow.py  generate_dynamic_worlds.py  generate_human_worlds.py  generate_hybrid_human_worlds.py  generate_hybrid_shape_worlds.py  generate_thin_dynamic_worlds.py  generate_wall_worlds.py  generate_wide_dynamic_worlds.py
jackal_helper/worlds/: world_0.world  world_1.world  world_10.world  world_11.world  world_12.world  world_13.world  world_14.world  world_15.world  world_153.world  world_16.world  world_17.world  world_18.world  world_19.world  world_2.world  world_20.world  world_209.world  world_21.world  world_22.world  world_23.world  world_3.world  world_4.world  world_43.world  world_5.world  world_6.world  world_7.world  world_74.world  world_8.world  world_9.world
local_buffer/: config.yaml  pk.py  policy_noise
local_buffer/actor_0/: traj_0.pickle  traj_1.pickle  traj_2.pickle  traj_3.pickle  traj_4.pickle
rl_algos/: backtrack_sac.py  base_rl_algo.py  collector.py  ddpg.py  model_based.py  net.py  sac.py  td3.py
slurms/: singularity_run_cluster.sh  slurm_dyn.sh  slurm_dynamic_4.sh  slurm_dynamic_8.sh  slurm_generalization_250.sh
utils/: event_visualization.py  experience.py  real_world_test.py  transfer_train.py
