<?xml version="1.0"?>
<package format="2">
  <name>esim</name>
  <version>0.1.0</version>
  <description>
    The ESIM package provides event-based camera simulation and event 
    generation functionality for use in robotics and vision-based applications.
  </description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- License information -->
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies on ROS packages -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>dv_ros_msgs</build_depend>

  <!-- Exported dependencies for others who build against this package -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>dv_ros_msgs</build_export_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>dv_ros_msgs</exec_depend>

  <!-- For roslib (if you actually use it) -->
  <depend>roslib</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
